init: 個人用振り返り・todo管理アプリケーションの初期化: mock作成
