# backend/internal/model/sprints.go
@@ -3,14 +3,19 @@ package model
 import "backend/internal/types"
 
 type Sprint struct {
-	ID        int              `json:"id"`
-	Title     string           `json:"title"`
-	Completed bool             `json:"completed"`
-	CreatedAt types.CustomTime `json:"created_at"`
-	UpdatedAt types.CustomTime `json:"updated_at"`
+	ID         int              `json:"id" gorm:"primaryKey"`
+	Name       string           `json:"name" gorm:"not null"`
+	Color      string           `json:"color"`
+	IsFavorite bool             `json:"is_favorite" gorm:"default:false"`
+	CreatedAt  types.CustomTime `json:"created_at"`
+	UpdatedAt  types.CustomTime `json:"updated_at"`
 }
 
 type SprintSearchRequest struct {
-	Title     *string `json:"title"`
-	Completed *bool   `json:"completed"`
+	Name       *string `json:"name"`
+	IsFavorite *bool   `json:"is_favorite"`
+}
+
+type UpdateFavoriteRequest struct {
+	IsFavorite bool `json:"is_favorite"`
 }
